fix(lateral-tab): adjust user section spacing and profile button positioning

--- a/src/app/components/LateralTab/LateralTab.module.css
+++ b/src/app/components/LateralTab/LateralTab.module.css
@@ -46,35 +46,21 @@
 }
 
 .user {
-  gap: .3rem;
   padding: 0;
   width: 100%;
+  padding-block: 1rem;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
 }
 
 .user li {
   width: 100%;
-  min-height: 2.5rem;
+  padding-inline: .3rem;
   display: flex;
   position: relative;
   align-items: center;
-  justify-content: center;
-  padding-inline: .3rem;
   box-sizing: border-box;
-}
-
-.archive {
-  cursor: pointer;
-  transition-duration: .4s;
-}
-
-.archive:hover {
-  color: var(--color-text-bright);
-}
-
-.menuToggleActive {
-  color: var(--color-accent);
+  justify-content: center;
 }
